# urf-common-cpp

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: CodeCoverage.cmake  UrfCMakeSetup.cmake
src/: CMakeLists.txt
src/common/components/: ComponentStateMachine.cpp  IComponent.cpp  SettingsGroup.cpp
src/common/containers/: vector.cpp
src/common/containers/Linux/: SharedObject.cpp
src/common/containers/Windows/: SharedObject.cpp
src/common/events/: events.cpp
src/common/logger/: Logger.cpp
src/common/properties/: ObservableProperty.cpp  ObservablePropertyFactory.cpp
src/common/threading/: ThreadPool.cpp
src/urf/common/: args.hpp
src/urf/common/components/: ComponentStateMachine.hpp  IComponent.hpp  SettingsGroup.hpp
src/urf/common/containers/: SharedObject.hpp  ThreadSafeQueue.hpp  vector.hpp
src/urf/common/events/: events.hpp
src/urf/common/logger/: Logger.hpp
src/urf/common/properties/: ObservableProperty.hpp  ObservablePropertyFactory.hpp
src/urf/common/threading/: ThreadPool.hpp
tests/: CMakeLists.txt
tests/unittests/: CMakeLists.txt  main.cpp
tests/unittests/components/: ComponentsTests.cpp
tests/unittests/containers/: SharedObjectTests.cpp  VectorTests.cpp
tests/unittests/events/: EventsTests.cpp
tests/unittests/properties/: ObservablePropertyFactoryTests.cpp  ObservablePropertyTests.cpp
tests/unittests/threading/: ThreadPoolTests.cpp
